# mlpolygen

./: .gitignore  .gitmodules  .hg_archival.txt  .hgignore  .hgtags  AUTHORS  CMakeLists.txt  COPYING  README.rst
.github/workflows/: cmake.yml  publish.yml
CMakeModules/: FindGMP.cmake  FindGMPXX.cmake
libs/PrimeFactorizer/: PrimeFactorizer.h  main.cc
src/: LFSRPolynomial.cc  LFSRPolynomial.h  LFSRVector.cc  LFSRVector.h  MLPolyTester.cc  MLPolyTester.h  lfsr_s.c  main.cc
test/: b011260.txt  common.mk  longtests.mk  mlpolyN.py
